--- a/scss/_navigations.scss
+++ b/scss/_navigations.scss
@@ -87,13 +87,20 @@ body [type="checkbox"]:checked ~ .header__navigation label {
   @include font-wei-norm-siz-16;
   @include center-background;
   background-image: icon("icon_arrow_left.svg");
-  //background-image: url(../icons/icon_arrow_left.svg);
   background-size: 14px;
   background-position: left;
   margin-top: 17px;
   padding: 30px;
   text-decoration: $text-decoration-none;
   color: rgba(0, 0, 0, 0.5);
+  transition: .3s;
+  font-size: 16px;
+  line-height: 24px;
+}
+
+.back-to-portfolio:hover {
+  color: $secondary-color;
+  transform: scale(1.1);
 }
 
 //@media (720px)
@@ -128,7 +135,8 @@ body [type="checkbox"]:checked ~ .header__navigation label {
 
 //rule for the navigation list on desktop
   .list--anchor  {
-    line-height: 48px;
+    line-height: 24px;
     font-size: 16px;
+    font-weight: bold;
   }
 }
